--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ video {
 <main>
   <div class="video-container">
     <video id="adVideo" autoplay muted loop playsinline>
-      <source src="c:\Users\ronal\Desktop\RASCUNHOS\CARTAZ\copycat_ads_NOVO 2.mp4" type="video/mp4">
+      <source src="copycat_ads_NOVO 2.mp4" type="video/mp4">
       Seu navegador não suporta vídeo.
     </video>
   </div>
@@ -205,3 +205,4 @@ video {
 </script>
 </body>
 </html>
+
