--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ video {
 </div>
 
 <header>
-  <a href="https://wa.me/5598988438603"whatsapp-button" target="_blank">
+  <a href="https://wa.me/5598988438603" class="whatsapp-button" target="_blank">
     💬 Fale Conosco no WhatsApp
   </a>
   <button class="audio-button" id="audioBtn" onclick="ativarAudio()">
@@ -205,6 +205,7 @@ video {
 </script>
 </body>
 </html>
+
 
 
 
